--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+	 	</dependency>
+		<dependency>
+			<groupId>com.f5app</groupId>
+			<artifactId>eventpublisher</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
